--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,11 @@
-<%- include('./partials/header') %>
-
-<div class="container">
-    <h1>Welcome to the playersApp !</h1>
-</div>
-
-<%- include('./partials/footer') %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home Page</title>
+</head>
+<body>
+    <h1>Welcome to the Home Page!</h1>
+</body>
+</html>
