--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
 </head>
+
 <body>
+
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/all-players">All Players</a></li>
+            <li><a href="/my-players">My Players</a></li>
+            <li><a href="/search-players">Search Players</a></li>
+        </ul>
+    </nav>
+
     <h1>Welcome to the Home Page!</h1>
 </body>
 </html>
