Home + All PLayers page running

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,22 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-</head>
+<%- include('layout', {title: 'Home Page'}) %>
 
-<body>
-
-    <nav>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/all-players">All Players</a></li>
-            <li><a href="/my-players">My Players</a></li>
-            <li><a href="/search-players">Search Players</a></li>
-        </ul>
-    </nav>
-
-    <h1>Welcome to the Home Page!</h1>
-</body>
-</html>
+<h1>Welcome to the Home Page!</h1>
