--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,8 +1,8 @@
-<nav>
+<nav class = "navbar">
     <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/all-players">All Players</a></li>
-        <li><a href="/my-players">My Players</a></li>
-        <li><a href="/search-players">Search Players</a></li>
+        <li><a href="/" class="nav-link">Home</a></li>
+        <li><a href="/allPlayers" class="nav-link"> All Players</a></li>
+        <li><a href="/myPlayers" class="nav-link">My Players</a></li>
+        <li><a href="/searchPlayers" class="nav-link">Search Players</a></li>
     </ul>
 </nav>
