--- a/views/allPlayers.ejs
+++ b/views/allPlayers.ejs
@@ -1,4 +1,17 @@
 
 <%- include('layout', { title: 'All Players' }) %>
+
 <h1>All Players Page</h1>
 
+<div class ="player-chart">
+     <% randomPlayers.forEach(player => { %>
+            <div class="player-card ">
+                <h2 class ="player-name"><%= player.name %></h2>
+                <p class ="player-info">
+                    <span class="info-label">Position:</span> <span class="info-value"><%= player.position %></span><br>
+                    <span class="info-label">Nationality:</span> <span class="info-value"><%= player.nationality %></span><br>
+                    <span class="info-label">Shirt No:</span> <span class="info-value"><%= player.shirtNumber %></span><br>
+                </p>
+            </div>
+    <% }); %>
+</div>
