fly deploy test

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,13 @@
 <%- include('layout', {title: 'Home Page'}) %>
 
 <h1>Welcome to the Home Page!</h1>
+
+<div class="box" id="aboutApp">
+    <h2>About the App:</h2>
+    <p>Purpose of the playersApp</p>
+</div>
+
+<div class="box" id="instructions">
+    <h2>Instructions:</h2>
+    <p>How to navigate through the website.</p>
+</div>
