--- a/public/styles.css
+++ b/public/styles.css
@@ -76,3 +76,21 @@ h1 {
 .info-value {
     color: #555;
 }
+
+/*----Style the Home Page----*/
+
+body {
+    background-color: grey;
+    color: white;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.box {
+    background-color: green;
+    border: 1vmin solid white;
+    padding: 20px;
+    margin: 20px;
+}
