--- a/views/allPlayers.ejs
+++ b/views/allPlayers.ejs
@@ -12,6 +12,13 @@
                     <span class="info-label">Nationality:</span> <span class="info-value"><%= player.nationality %></span><br>
                     <span class="info-label">Shirt No:</span> <span class="info-value"><%= player.shirtNumber %></span><br>
                 </p>
+
+                <form action="/markAsFavorite/<%= player._id %>" method="POST">
+                    <input type="checkbox" name="favorite" <% if (player.isFavorite) { %>checked<% } %>>
+                    <label for="favorite">Add to Favorites</label>
+                    <button type="submit">Submit</button>
+                </form>
+    
             </div>
     <% }); %>
 </div>
