--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,17 +1,19 @@
-<%- include('layout', {title: 'Home Page'}) %>
+<!-- home.ejs -->
+
+<%- include('layout', { title: 'Home Page' }) %>
 
 <h1>Welcome to the Home Page!</h1>
 
 <div class="box" id="aboutApp">
     <h2>About the App:</h2>
-    <p>The playersApp is a user friendly app, which allows the fans of the game to:</p>
-    <p> view, favorite, and search for your favorite players with ease.</p>
+    <p>The playersApp is a user-friendly app, which allows the fans of the game to:</p>
+    <p>view, favorite, and search for your favorite players with ease.</p>
 </div>
 
 <div class="box" id="instructions">
     <h2>Instructions:</h2>
     <p>How to navigate through the website.</p>
-    <p>The All Players page, shows you a few sample of players our database holds. </p>
-    <p>In the My Players page, you'll need to login in order to create your Favorite's list. </p>
+    <p>The All Players page shows you a few samples of players our database holds.</p>
+    <p>In the My Players page, you'll need to log in to create your Favorite's list.</p>
     <p>Use the Search Players tab to look for players based on their: Name, Nationality, Shirt Number, etc.</p>
 </div>
