--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -3,6 +3,6 @@
         <li><a href="/" class="nav-link">Home</a></li>
         <li><a href="/allPlayers" class="nav-link"> All Players</a></li>
         <li><a href="/myPlayers" class="nav-link">My Players</a></li>
-        <li><a href="/searchPlayers" class="nav-link">Search Players</a></li>
+        <li><a href="/addPlayers" class="nav-link">Add New Players</a></li>
     </ul>
 </nav>
