--- a/public/styles.css
+++ b/public/styles.css
@@ -112,7 +112,7 @@ body {
 .my-players li {
     margin: 10px 0;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1vmin solid #ccc;
     background-color: green;
     color: black;
 }
