--- a/views/myPlayers.ejs
+++ b/views/myPlayers.ejs
@@ -1,5 +1,3 @@
-<!-- myPlayers.ejs -->
-
 <%- include('layout', { title: 'My Players' }) %>
 
 <h1>My Players</h1>
@@ -13,6 +11,9 @@
                 <span class="info-label">Nationality:</span> <span class="info-value"><%= player.nationality %></span><br>
                 <span class="info-label">Shirt No:</span> <span class="info-value"><%= player.shirtNumber %></span><br>
             </p>
+            <form action="/myPlayers/<%= player._id %>?_method=DELETE" method="POST" class="delete-form">
+                <button type="submit" class="delete-button">Delete</button>
+            </form>
         </div>
 
         <% if ((index + 1) % 3 === 0) { %>
@@ -20,4 +21,5 @@
         <% } %>
     <% }); %>
 </div>
+
 
