sign up/login functions

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
 <!-- home.ejs -->
 
-<%- include('layout', { title: 'Home Page' }) %>
+<%- include('layout', { title: 'Home Page', body: '' }) %>
 
 <h1>Welcome to the Home Page!</h1>
 
@@ -17,3 +17,4 @@
     <p>In the My Players page, you'll need to log in to create your Favorite's list.</p>
     <p>Use the Search Players tab to look for players based on their: Name, Nationality, Shirt Number, etc.</p>
 </div>
+
