log out functions

--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -4,5 +4,6 @@
         <li><a href="/allPlayers" class="nav-link"> All Players</a></li>
         <li><a href="/myPlayers" class="nav-link">My Players</a></li>
         <li><a href="/addPlayers" class="nav-link">Add New Players</a></li>
+        <li><a href="/logout" class="nav-link">Log Out</a></li>
     </ul>
 </nav>
