addresses mongodb signup issues, login/signup functionality works

--- a/views/myPlayers.ejs
+++ b/views/myPlayers.ejs
@@ -1,6 +1,6 @@
 <%- include('layout', { title: 'My Players' }) %>
 
-<h1>My Players</h1>
+<h1>Community Players</h1>
 
 <div class="player-chart">
     <% players.forEach((player, index) => { %>
