--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,14 +7,14 @@
 <div class="box" id="aboutApp">
     <h2>About the App:</h2>
     <p>The playersApp is a user-friendly app, which allows the fans of the game to:</p>
-    <p>view, favorite, and search for your favorite players with ease.</p>
+    <p>view, favorite, and share their favorite players with ease.</p>
 </div>
 
 <div class="box" id="instructions">
     <h2>Instructions:</h2>
-    <p>How to navigate through the website.</p>
-    <p>The All Players page shows you a few samples of players our database holds.</p>
-    <p>In the My Players page, you'll need to log in to create your Favorite's list.</p>
-    <p>Use the Search Players tab to look for players based on their: Name, Nationality, Shirt Number, etc.</p>
+    <p>The All Players page renders a set of players from the API.</p>
+    <p>The Community Players page, allows you to view some of the communities favorite players.</p>
+    <p>You can share some of your favorite players via the Add Players Form.</p>
+    <p>Get creative and share big names or upcoming golden boys/girls!</p>
 </div>
 
