--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,9 +3,14 @@
 <div class="content">
     <div id="signupForm">
         <h2>Signup</h2>
+        <% if (typeof message !== 'undefined' && message) { %>
+            <p><%= message %></p>
+        <% } %>
         <form action="/signup" method="POST">
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
             <button type="submit">Signup</button>
